# spin-python-sdk

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  build-python.sh  build.rs  config.txt  pyproject.toml  spin.toml
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommands.sh  postCreateCommands.sh
.github/workflows/: release.yaml  test.yaml
crates/spin-python-cli/: Cargo.toml  build.rs
crates/spin-python-cli/src/: main.rs
crates/spin-python-engine/: Cargo.toml  build.rs
crates/spin-python-engine/src/: lib.rs
docs/: index.html  key_value.html  llm.html  mysql.html  postgres.html  redis.html  spin_config.html  spin_key_value.html  spin_redis.html  spin_sqlite.html  sqlite.html  variables.html
docs/http/: index.html  poll_loop.html  simple.html
docs/v1/: spin_http.html  spin_llm.html
docs/v2/: llm.html
docs/v2/http/: index.html  poll_loop.html
docs/v2/wit/: types.html
docs/v3/: index.html  key_value.html  llm.html  mqtt.html  mysql.html  postgres.html  redis.html  sqlite.html  variables.html
docs/v3/http/: index.html  poll_loop.html
docs/v3/wit/: index.html  types.html
docs/wit/: index.html
docs/wit/exports/: inbound_redis.html  index.html
docs/wit/imports/: error.html  index.html  key_value.html  llm.html  monotonic_clock.html  mysql.html  outgoing_handler.html  poll.html  postgres.html  rdbms_types.html  redis.html  sqlite.html  streams.html  types.html  variables.html
examples/KV/: README.md  app.py  spin.toml
examples/KV/.spin/: sqlite_key_value.db
examples/external-lib-example/: README.md  app.py  requirements.txt  spin.toml
examples/external_lib/: Pipfile  README.md  app.py  spin.toml
examples/hello/: README.md  app.py  spin.toml
examples/hello/static-assets/: foo.txt
examples/hello_world/: app.py  spin.toml
examples/llm/: README.md  app.py  spin.toml
examples/matrix-math/: README.md  app.py  requirements.txt
examples/outbound_http/: README.md  app.py  spin.toml
examples/outbound_redis/: README.md  app.py  spin.toml
examples/outgoing-request/: README.md  app.py  spin.toml
examples/redis-trigger/: README.md  app.py  spin.toml
examples/spin-kv/: README.md  app.py  spin.toml
examples/spin-llm/: README.md  app.py  requirements.txt  spin.toml
examples/spin-mysql/: README.md  app.py  requirements.txt
examples/spin-outbound-mqtt/: README.md  app.py  requirements.txt  spin.toml
examples/spin-postgres/: README.md  app.py  requirements.txt  spin.toml
examples/spin-redis/: README.md  app.py  requirements.txt  spin.toml
examples/spin-sqlite/: README.md  app.py  spin.toml
examples/spin-variables/: README.md  app.py  requirements.txt  spin.toml
examples/sqlite/: README.md  app.py  migration.sql  spin.toml
examples/streaming/: README.md  app.py  spin.toml
manifest/: generate-manifest.sh  plugin-spin-compat.txt
py/: app.py  spin_http.py
scripts/: generate_docs.py
spin_sdk/: spin_config.py  spin_http.py  spin_key_value.py  spin_llm.py  spin_redis.py  spin_sqlite.py
spin_sdk/wit/: __init__.py
spin_sdk/wit/exports/: __init__.py  (+1 more)
src/: lib.rs  main.rs
src/spin_sdk/: __init__.py  componentize-py.toml  key_value.py  llm.py  mqtt.py  mysql.py  postgres.py  redis.py  sqlite.py  variables.py
test/: test.sh
test/test-app/: app.py  spin.toml
wit/: spin.wit
(+76 files in other folders)
