[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-sdk"
version = "2.0.0"
description = "Experimental SDK for Spin and Componentize-Py"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Fermyon Engineering", email = "engineering@fermyon.com" } ]
maintainers = [ { name = "Fermyon Engineering", email = "engineering@fermyon.com" } ]
keywords = [ "webassembly", "wasm", "component", "spin" ]

[project.urls]
repository = "https://github.com/fermyon/spin-python-sdk"
documentation = "https://fermyon.github.io/spin-python-sdk"

[tool.setuptools.packages.find]
where = ["src"]
