[package]
name = "spin-python-cli"
description = "A Spin plugin to convert Python apps to Spin-compatible WebAssembly modules"
version = "0.3.0"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]
edition = "2021"

[[bin]]
name = "spin-python"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = [ "derive" ] }
tar = "0.4.38"
tempfile = "3.3.0"
wizer = "3.0.0"
zstd = "0.11.1"

[build-dependencies]
anyhow = "1.0.68"
tar = "0.4.38"
zstd = "0.11.1"
