[package]
name = "spin-python-engine"
version = "0.3.2"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = { version = "1.2.1", features = ["serde"] }
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", rev = "ca08dd933de32fe09f4c318fbbc1f04853f2085f", default-features = false, features=["experimental"] }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }
pyo3 = { version = "0.17.3", features = [ "abi3-py310" ] }
once_cell = "1.16.0"
